--- a/src/application/views/Main.fxml
+++ b/src/application/views/Main.fxml
@@ -1,8 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1">
-	<!-- TODO Add Nodes -->
-</VBox>
-
+<Pane prefHeight="424.0" prefWidth="675.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.Controller">
+   <children>
+      <Button fx:id="createBtn" layoutX="219.0" layoutY="122.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="CREATE">
+         <font>
+            <Font name="Century Gothic Bold" size="25.0" />
+         </font>
+      </Button>
+      <Text fx:id="titleText" fill="#e9c46a" layoutX="176.0" layoutY="397.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Roomiez" textAlignment="CENTER" wrappingWidth="323.13671875">
+         <font>
+            <Font name="Century Schoolbook Bold Italic" size="55.0" />
+         </font>
+      </Text>
+      <Button fx:id="joinBtn" layoutX="219.0" layoutY="212.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="JOIN">
+         <font>
+            <Font name="System Bold" size="25.0" />
+         </font>
+      </Button>
+   </children>
+</Pane>
