--- a/src/application/models/RootLayout.fxml
+++ b/src/application/models/RootLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<javafx.scene.layout.AnchorPane fx:id="root_pane" minHeight="200.0" minWidth="200.0" prefHeight="246.0" prefWidth="342.0" stylesheets="@application.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<javafx.scene.layout.AnchorPane fx:id="root_pane" minHeight="200.0" minWidth="200.0" prefHeight="246.0" prefWidth="342.0" stylesheets="@../application.css" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <SplitPane fx:id="base_pane" dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
