--- a/src/application/views/MoveInChecklist.fxml
+++ b/src/application/views/MoveInChecklist.fxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -12,6 +15,14 @@
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
       </Text>
+      <ScrollPane fx:id="checklistPane" layoutY="80.0" prefHeight="200.0" prefWidth="600.0" styleClass="scroll-pane">
+         <content>
+	         <VBox fx:id="checklistVBox" spacing="20.0">
+               <padding>
+                  <Insets left="20.0" />
+               </padding></VBox>
+         </content>
+      </ScrollPane>
       <Button fx:id="addBtn" layoutX="156.0" layoutY="304.0" mnemonicParsing="false" onAction="#handleAddBtnClicked" prefHeight="51.0" prefWidth="72.0" style="-fx-background-color: #3caea3;" text="+">
          <font>
             <Font name="System Bold" size="33.0" />
