--- a/src/application/views/Main.fxml
+++ b/src/application/views/Main.fxml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane prefHeight="424.0" prefWidth="675.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.Controller">
+<Pane fx:id="joinField" prefHeight="424.0" prefWidth="675.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.MainController">
    <children>
-      <Button fx:id="createBtn" layoutX="64.0" layoutY="121.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="CREATE">
+      <Button fx:id="createButton" layoutX="64.0" layoutY="122.0" mnemonicParsing="false" onAction="#PressCreate" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="CREATE">
          <font>
             <Font name="Century Gothic Bold" size="25.0" />
          </font>
@@ -18,19 +19,24 @@
             <Font name="Century Schoolbook Bold Italic" size="55.0" />
          </font>
       </Text>
-      <Button fx:id="joinBtn" layoutX="64.0" layoutY="212.0" mnemonicParsing="false" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="JOIN">
+      <Button fx:id="JoinButton" layoutX="64.0" layoutY="213.0" mnemonicParsing="false" onAction="#PressJoin" prefHeight="64.0" prefWidth="224.0" style="-fx-background-color: #f4a261;" text="JOIN">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
       </Button>
-      <TextField fx:id="createField" layoutX="373.0" layoutY="129.0" prefHeight="49.0" prefWidth="224.0" promptText="Enter code to create new room...">
+      <TextField fx:id="createText" layoutX="371.0" layoutY="129.0" prefHeight="49.0" prefWidth="224.0" promptText="Enter code to create new room...">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font>
       </TextField>
-      <TextField fx:id="joinBtn" layoutX="373.0" layoutY="220.0" prefHeight="49.0" prefWidth="224.0" promptText="Enter code to join existing room...">
+      <TextField fx:id="joinText" layoutX="373.0" layoutY="220.0" prefHeight="49.0" prefWidth="224.0" promptText="Enter code to join existing room...">
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font></TextField>
+      <Label fx:id="status" layoutX="64.0" layoutY="42.0" text="Status: Enter Room Code" textFill="#e9c46a">
+         <font>
+            <Font size="25.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
