--- a/src/application/views/RoomDesign.fxml
+++ b/src/application/views/RoomDesign.fxml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -11,5 +17,29 @@
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
       </Text>
+      <BorderPane layoutX="17.0" layoutY="64.0" prefHeight="322.0" prefWidth="566.0">
+         <center>
+            <Canvas height="275.0" width="551.0" BorderPane.alignment="CENTER" />
+         </center>
+         <top>
+            <VBox prefHeight="27.0" prefWidth="566.0" BorderPane.alignment="CENTER">
+               <children>
+                  <MenuBar prefHeight="25.0" prefWidth="584.0">
+                    <menus>
+                      <Menu mnemonicParsing="false" text="Tools">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Back" />
+                        </items>
+                      </Menu>
+                      <Menu mnemonicParsing="false" text="Shapes">
+                        <items>
+                          <MenuItem mnemonicParsing="false" text="Rectangle" />
+                        </items>
+                      </Menu>
+                    </menus>
+                  </MenuBar>
+               </children>
+            </VBox>
+         </top></BorderPane>
    </children>
 </Pane>
