--- a/src/application/views/RoomDesign.fxml
+++ b/src/application/views/RoomDesign.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.RoomDesignController">
    <children>
       <Text fill="#f4a261" layoutX="156.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Design" textAlignment="CENTER" wrappingWidth="287.13671875">
          <font>
@@ -19,16 +19,16 @@
       </Text>
       <BorderPane layoutX="17.0" layoutY="64.0" prefHeight="322.0" prefWidth="566.0">
          <center>
-            <Canvas height="275.0" width="551.0" BorderPane.alignment="CENTER" />
+            <Canvas fx:id="canvas" height="275.0" width="551.0" BorderPane.alignment="CENTER" />
          </center>
          <top>
             <VBox prefHeight="27.0" prefWidth="566.0" BorderPane.alignment="CENTER">
                <children>
-                  <MenuBar prefHeight="25.0" prefWidth="584.0">
+                  <MenuBar fx:id="menuBar" prefHeight="25.0" prefWidth="584.0">
                     <menus>
                       <Menu mnemonicParsing="false" text="Tools">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Back" />
+                          <MenuItem mnemonicParsing="false" onAction="#handleBackMenu" text="Back" />
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Shapes">
