--- a/src/application/views/RoomDesign.fxml
+++ b/src/application/views/RoomDesign.fxml
@@ -33,7 +33,7 @@
                       </Menu>
                       <Menu mnemonicParsing="false" text="Shapes">
                         <items>
-                          <MenuItem mnemonicParsing="false" text="Rectangle" />
+                          <MenuItem mnemonicParsing="false" onAction="#handleRectangle" text="Rectangle" />
                         </items>
                       </Menu>
                     </menus>
