--- a/src/application/views/Main.fxml
+++ b/src/application/views/Main.fxml
@@ -33,9 +33,9 @@
          <font>
             <Font name="Century Gothic" size="12.0" />
          </font></TextField>
-      <Label fx:id="status" layoutX="64.0" layoutY="42.0" text="Status: Enter Room Code" textFill="#e9c46a">
+      <Label fx:id="status" layoutX="190.0" layoutY="44.0" text="Status: Enter Room Code" textAlignment="CENTER" textFill="#e9c46a">
          <font>
-            <Font size="25.0" />
+            <Font name="Century Gothic Bold" size="25.0" />
          </font>
       </Label>
    </children>
