--- a/src/application/views/GroceryList.fxml
+++ b/src/application/views/GroceryList.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -12,19 +14,24 @@
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
       </Text>
-      <Button fx:id="addBtn" layoutX="156.0" layoutY="304.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="72.0" style="-fx-background-color: #3caea3;" text="+">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Button>
-      <Button fx:id="subtractBtn" layoutX="379.0" layoutY="304.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="72.0" style="-fx-background-color: #3caea3;" text="-">
-         <font>
-            <Font name="System Bold" size="33.0" />
-         </font>
-      </Button>
-      <Button fx:id="backBtn" layoutX="24.0" layoutY="24.0" mnemonicParsing="false" onAction="#handleBackGrocery" prefHeight="37.0" prefWidth="72.0" style="-fx-background-color: #e76f51;" text="&lt;">
+      <ScrollPane fx:id="groceryPane" layoutY="94.0" prefHeight="200.0" prefWidth="600.0" styleClass="scroll-pane">
+         <content>
+            <VBox fx:id="groceryVBox" prefHeight="200.0" prefWidth="100.0" />
+         </content>
+      </ScrollPane>
+      <Button fx:id="backBtn" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleBackGrocery" prefHeight="37.0" prefWidth="72.0" style="-fx-background-color: #e76f51;" text="&lt;">
          <font>
             <Font name="Century Gothic Bold" size="24.0" />
+         </font>
+      </Button>
+      <Button fx:id="subtractBtn" layoutX="371.0" layoutY="306.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="72.0" style="-fx-background-color: #3caea3;" text="-">
+         <font>
+            <Font name="System Bold" size="33.0" />
+         </font>
+      </Button>
+      <Button fx:id="addBtn" layoutX="171.0" layoutY="306.0" mnemonicParsing="false" onAction="#handleAddBtnClicked" prefHeight="51.0" prefWidth="72.0" style="-fx-background-color: #3caea3;" text="+">
+         <font>
+            <Font name="System Bold" size="33.0" />
          </font>
       </Button>
    </children>
