--- a/src/application/views/HomeScreen.fxml
+++ b/src/application/views/HomeScreen.fxml
@@ -21,7 +21,7 @@
             <Font name="Century Gothic Bold" size="25.0" />
          </font>
       </Button>
-      <Button fx:id="choreBtn" layoutX="200.0" layoutY="310.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="309.0" style="-fx-background-color: #f4a261;" text="Chore Schedule">
+      <Button fx:id="choreBtn" layoutX="200.0" layoutY="310.0" mnemonicParsing="false" onAction="#ChoreSchBtnClick" prefHeight="61.0" prefWidth="309.0" style="-fx-background-color: #f4a261;" text="Chore Schedule">
          <font>
             <Font name="Century Gothic Bold" size="25.0" />
          </font>
