--- a/src/application/views/ChoreSch.fxml
+++ b/src/application/views/ChoreSch.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.*?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="611.0" prefWidth="854.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.ChoreSchController">
    <children>
-      <Text fill="#f4a261" layoutX="191.0" layoutY="46.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chore Scheduler">
+      <Text fill="#f4a261" layoutX="305.0" layoutY="54.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Chore Scheduler">
          <font>
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
@@ -20,7 +20,42 @@
             <Font name="Century Gothic Bold" size="24.0" />
          </font>
       </Button>
-      <GridPane gridLinesVisible="true" layoutX="49.0" layoutY="86.0" prefHeight="504.0" prefWidth="756.0">
+      <GridPane fx:id="grid" gridLinesVisible="true" hgap="10.0" layoutX="49.0" layoutY="86.0" prefHeight="504.0" prefWidth="756.0" vgap="10.0">
+       <Text text="Monday" GridPane.columnIndex="0" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Tuesday" GridPane.columnIndex="1" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Wednesday" GridPane.columnIndex="2" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Thursday" GridPane.columnIndex="3" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Friday" GridPane.columnIndex="4" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Saturday" GridPane.columnIndex="5" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
+      <Text text="Sunday" GridPane.columnIndex="6" GridPane.rowIndex="0">
+       <font>
+            <Font name="Century Gothic Bold" size="15.0" />
+         </font>
+      </Text>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
