--- a/src/application/views/RoomDesign.fxml
+++ b/src/application/views/RoomDesign.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.RoomDesignController">
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#handlePaneMouseMoved" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.RoomDesignController">
    <children>
       <Text fill="#f4a261" layoutX="156.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Design" textAlignment="CENTER" wrappingWidth="287.13671875">
          <font>
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
       </Text>
-      <BorderPane layoutX="17.0" layoutY="64.0" prefHeight="322.0" prefWidth="566.0">
+      <BorderPane layoutX="17.0" layoutY="64.0" prefHeight="322.0" prefWidth="566.0" style="-fx-border-color: white; -fx-border-radius: 0 0 10 10; -fx-border-width: 2;">
          <center>
             <Canvas fx:id="canvas" height="275.0" width="551.0" BorderPane.alignment="CENTER" />
          </center>
@@ -29,11 +29,17 @@
                       <Menu mnemonicParsing="false" text="Tools">
                         <items>
                           <MenuItem mnemonicParsing="false" onAction="#handleBackMenu" text="Back" />
+                              <MenuItem mnemonicParsing="false" text="Resize" />
+                              <MenuItem mnemonicParsing="false" text="Move" />
+                              <MenuItem mnemonicParsing="false" text="Change Color" />
+                              <MenuItem mnemonicParsing="false" text="Delete" />
                         </items>
                       </Menu>
                       <Menu mnemonicParsing="false" text="Shapes">
                         <items>
                           <MenuItem mnemonicParsing="false" onAction="#handleRectangle" text="Rectangle" />
+                              <MenuItem mnemonicParsing="false" onAction="#handleCircle" text="Circle" />
+                              <MenuItem mnemonicParsing="false" onAction="#handleLine" text="Line" />
                         </items>
                       </Menu>
                     </menus>
