--- a/src/application/views/ChoreSch.fxml
+++ b/src/application/views/ChoreSch.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.text.Text?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="611.0" prefWidth="854.0" style="-fx-background-color: #264653;" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controllers.ChoreSchController">
    <children>
@@ -21,7 +22,7 @@
          </font>
       </Button>
       <GridPane fx:id="grid" gridLinesVisible="true" hgap="10.0" layoutX="49.0" layoutY="86.0" prefHeight="504.0" prefWidth="756.0" vgap="10.0">
-       <Text text="Monday" GridPane.columnIndex="0" GridPane.rowIndex="0">
+           <Text text="Monday" GridPane.columnIndex="0" GridPane.rowIndex="0">
        <font>
             <Font name="Century Gothic Bold" size="15.0" />
          </font>
@@ -44,18 +45,83 @@
       <Text text="Friday" GridPane.columnIndex="4" GridPane.rowIndex="0">
        <font>
             <Font name="Century Gothic Bold" size="15.0" />
+           </font>
+           </Text>
+          <Label text="Dishes" textFill="WHITE" GridPane.rowIndex="1">
+         <font>
+            <Font name="Century Gothic Bold" size="24.0" />
          </font>
-      </Text>
-      <Text text="Saturday" GridPane.columnIndex="5" GridPane.rowIndex="0">
-       <font>
-            <Font name="Century Gothic Bold" size="15.0" />
+          </Label>
+         <Label prefHeight="31.0" prefWidth="95.0" text="Sweep" textFill="WHITE" GridPane.rowIndex="2">
+         <font>
+            <Font name="Century Gothic Bold" size="24.0" />
          </font>
-      </Text>
-      <Text text="Sunday" GridPane.columnIndex="6" GridPane.rowIndex="0">
-       <font>
-            <Font name="Century Gothic Bold" size="15.0" />
+          </Label>
+          <Label text="Vacuum" textFill="WHITE" GridPane.rowIndex="3">
+         <font>
+            <Font name="Century Gothic Bold" size="20.0" />
          </font>
-      </Text>
+          </Label>
+         <Label text="Dylan" textFill="#1ca844" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
+         <Label text="Dylan" textFill="#1ca844" GridPane.columnIndex="2" GridPane.rowIndex="2">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
+         <Label text="Dylan" textFill="#1ca844" GridPane.columnIndex="3" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
+         <Label text="Dylan" textFill="#1ca844" GridPane.columnIndex="4" GridPane.rowIndex="2">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
+         <Label text="Dylan" textFill="#1ca844" GridPane.columnIndex="5" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="4" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="6" GridPane.rowIndex="1">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="3" GridPane.rowIndex="3">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Madeline" textFill="#ff9999" GridPane.columnIndex="6" GridPane.rowIndex="2">
+            <font>
+               <Font name="Century Gothic Bold" size="21.0" />
+            </font>
+         </Label>
+         <Label text="Jacob" textFill="#815bff" GridPane.columnIndex="5" GridPane.rowIndex="3">
+            <font>
+               <Font name="Century Gothic Bold" size="22.0" />
+            </font>
+         </Label>
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
