--- a/src/application/views/GroceryList.fxml
+++ b/src/application/views/GroceryList.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.Pane?>
@@ -14,9 +15,13 @@
             <Font name="Century Gothic Bold" size="30.0" />
          </font>
       </Text>
-      <ScrollPane fx:id="groceryPane" layoutY="94.0" prefHeight="200.0" prefWidth="600.0" styleClass="scroll-pane">
+      <ScrollPane fx:id="groceryPane" layoutY="80.0" prefHeight="200.0" prefWidth="600.0" styleClass="scroll-pane">
          <content>
-            <VBox fx:id="groceryVBox" prefHeight="200.0" prefWidth="100.0" />
+            <VBox fx:id="groceryVBox">
+               <padding>
+                  <Insets left="20.0" />
+               </padding>
+            </VBox>
          </content>
       </ScrollPane>
       <Button fx:id="backBtn" layoutX="14.0" layoutY="22.0" mnemonicParsing="false" onAction="#handleBackGrocery" prefHeight="37.0" prefWidth="72.0" style="-fx-background-color: #e76f51;" text="&lt;">
